# edu-as-airsync-monorepo

./: .gitattributes  .gitignore  .gitmodules  analysis_options.yaml  lefthook.yml  melos.yaml  pubspec.yaml
.github/workflows/: workflow-scan-full.yml  workflow-scan-pr.yml
apps/receiver/: .gitignore  README.md  analysis_options.yaml  azure-pipelines-build.yml  azure-pipelines.yml  lefthook.yml  pubspec.yaml
apps/receiver/.azuredevops/: dependabot.yml
apps/receiver/.claude/: Cast to Board設備列表排序規則與場景說明.md
apps/receiver/android/: build.gradle  gradle.properties  settings.gradle
apps/receiver/assets/: 3rd_licenses.json  ViewSonic-MVB-EULA-2021.txt  ViewSonic-MVB-EULA-20230508.txt
apps/receiver/ci/: azure-pipelines-upload-dropbox.yml
apps/receiver/design/: airsync-token-v2.json  airsync-token-v3-2.json
apps/receiver/docs/: release-note-testing.md
apps/receiver/lib/: app_analytics.dart  app_auto_enroll.dart  app_colors.dart  app_exception_report.dart  app_instance_create.dart  app_manager_config.dart  app_overlay_tab.dart  app_preferences.dart  app_ui_constant.dart  app_update_helper.dart  main.dart  main_common.dart  main_common_floating.dart  main_common_overlay_tab.dart  main_dev.dart  main_production.dart  main_stage.dart  network_constants.dart  oss_licenses.dart  test_vs_api_page.dart
apps/receiver/poeditor_dl/: poeditor_airsync.sh
apps/receiver/test/: caching_http_client_test.dart  device_info_test.dart  get_webtransport_cert_test.dart  ip_util_test.dart  ip_util_test.mocks.dart  math_util_test.dart  rtc_metrics_rolling_aggregator_test.dart  rtc_metrics_test.dart  rtc_metrics_window_aggregator_test.dart  rtc_stats_parse_test.dart  rtc_stats_parse_test.mocks.dart  rtc_stats_presenter_test.dart  user_timer_manager_test.dart  widget_test.dart
apps/receiver/web/: index.html  manifest.json
apps/receiver/windows/: .gitignore  CMakeLists.txt
apps/sender/: .gitignore  .gitmodules  README.md  analysis_options.yaml  build-web-script.sh  lefthook.yml  pubspec.yaml
apps/sender/.github/: CODEOWNERS
apps/sender/.run/: OpenDev.run.xml  OpenProduction.run.xml  OpenStage.run.xml  Stage.run.xml  StoreDev.run.xml  StoreProduction.run.xml  StoreStage.run.xml
apps/sender/android/: build.gradle
apps/sender/assets/: ViewSonic-AirSync-EULA-20241115.txt  profiles.json  webtransport_cert_hashes.json
apps/sender/design/: airsync-token-v3.json  airsync-vsdsw-token-v1.json  airsync-vsdsw-token-v2.json
apps/sender/ios/: Podfile
apps/sender/lib/: annotation_common.dart  main.dart  main_common.dart  main_dev.dart  main_production.dart  main_stage.dart  oss_licenses.dart
apps/sender/windows/custom_actions/: CMakeLists.txt  PolicyConfig.h  custom_actions.cpp  custom_actions.h  install_audio.cpp  install_audio.h  main.cpp  msi_util.h  util.cpp  util.h
ci/: azure-pipelines-pr.yml
ci/receiver/: azure-pipelines-build.yml  azure-pipelines-upload-archive.yml  azure-pipelines.yml  cleanup-agent.yml  upload-to-dropbox.yml
ci/sender/: azure-pipelines-android.yml  azure-pipelines-ios.yml  azure-pipelines-macos.yml  azure-pipelines-release-note.yml  azure-pipelines-web.yml  azure-pipelines-windows.yml  azure-pipelines.yml  upload-to-dropbox.yml
docs/: compare-report.md  migration-plan.md
scripts/: compare-builds.sh  migrate.sh
(+750 files in other folders)
